
(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

The sync protocol has changed in this version, so make sure you update both
the client and the server at the same time.

-The functionality of mnemosyne-webserver has now been merged into the main
 program and can be activated through 'Configure Mnemosyne - servers'.
-Time to create backups has decreased, in some situations even by a factor 
 of 2 or more, speeding up syncing and program exit.
-The name of the currently active saved set of cards is now listed in title
 bar (requested by Silverbear).
-Added new statistic: number of new cards learned per day.
-Also sync relevant settings (e.g. fonts, colours, ...) during the initial
 sync.
-Improve the timeout handling of the sync protocol.
-Fix erroneous 'Wrong username or password' error.
-Added command line options --sync-server and --web-server which starts the 
 sync and the web server in headless mode (i.e. without a GUI) (useful to run 
 e.g. on a NAS server).
-Fix more errors coming from loading config files.
-Rework error handling when trying to load a database which no longer exists
 in its previous location.
-When editing a card through the browser, make sure the correct set of tags is
 displayed if sister cards have different tags (requested by Scott Youngman).
-Instruct people on the correct way to deal with '*.cards' files if they try
 to open it as a separate database (Kensor0).
-Make it clearer what 'Find duplicates' does.
-Fix tag tree sometimes not updating correctly if the user adds a new tag.
-People writing e.g. Javascript card and needing access to the full path of
 the media directory can now use db_media:///foo.png (requested by Gnome).
-Flash files are now synced as well (reported by heldtfisken).
-When editing a card where different sister cards have different tags, ask if
 the tags should be applied to the current card or to all sister cards.