@@ -5,10 +5,14 @@ before installing the new one.)
 The sync protocol has changed in this version, so make sure you update both
 the client and the server at the same time.
 
+-A quick-and-dirty Android client is available, where you can do reviews in
+ your mobile browser using a webserver which runs on your Android device.
+ This client has full support for the syncing protocol.
 -The functionality of mnemosyne-webserver has now been merged into the main
  program and can be activated through 'Configure Mnemosyne - servers'.
 -Time to create backups has decreased, in some situations even by a factor 
  of 2 or more, speeding up syncing and program exit.
+-Sped up all editing operations in the card browser.
 -The name of the currently active saved set of cards is now listed in title
  bar (requested by Silverbear).
 -Added new statistic: number of new cards learned per day.
